# game-of-live

./: Cargo.toml  README.md
assets/: LICENSE_ASSETS.md
assets/sprites/: spritesheet.ron
config/: bindings.ron  board.ron  run.ron  ui.ron
src/: main.rs  utils.rs
src/states/: game.rs  loading.rs  mod.rs
src/systems/: cell.rs  cell_display.rs  control.rs  drag_world.rs  fps_display.rs  mod.rs
